[package]
name = "focuson_cas"
version = "0.0.1"
edition = "2021"
description = "A content-addressable storage library implemented in Rust."
license = "MIT"
repository = "https://github.com/phil-rice/focuson-rust"
documentation = "https://docs.rs/focuson_cas"  # Update this URL if you have specific documentation elsewhere
readme = "README.md"
keywords = ["content-addressable", "storage", "rust"]

[dependencies]
sha1 = "0.11.0-pre.3"
tempfile = "3.10.1"

[dev-dependencies]
